[project]
name = "pyqt-ext"
version = "v2025.11.12"
description = "Collection of PyQt widgets/tools"
authors = [
    {name = "Marcel Goldschen-Ohm", email = "goldschen-ohm@utexas.edu"},
]
readme = "README.md"
keywords = ["PyQt", "PySide", "pyqtgraph"]
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "QtPy",
    "QtAwesome",
    "pyqtgraph",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
]

[project.urls]
homepage = "https://github.com/marcel-goldschen-ohm/pyqt-ext"
repository = "https://github.com/marcel-goldschen-ohm/pyqt-ext"
issues = "https://github.com/marcel-goldschen-ohm/pyqt-ext/issues"

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"
